# Junk

./: .gitignore  .gitmodules  README.md
Arduino/Follower/: Follower.ino  irfollower.cpp
Arduino/IR_Follower/: IR_Follower.ino  irfollower.h
Arduino/RandomTurn/: RandomTurn.ino  motor.h
Arduino/Timers/: Timers.ino
Arduino/sketch_dec24a/: sketch_dec24a.ino
Arduino/sketch_jan05b/: sketch_jan05b.ino
Arduino/sketch_jan13a/: motor.cpp
Arduino/sketch_jan13c/: sketch_jan13c.ino
Arduino/sketch_jan15a/: sketch_jan15a.ino
VMPrototype/backend/: binary.jb  server.js
VMPrototype/common/: commands.c  commands.h  data_structures.c  data_structures.h  interpreter.c  interpreter.h  test.h  util.c  util.h  view_node.c  view_node.h
VMPrototype/common/platform/: native.h
VMPrototype/tools/assembler/: Makefile  assembler  main.cpp  short.ja  short.jb  test.ja  test2.ja
VMPrototype/vm_android/app/: build.gradle  proguard-rules.pro
VMPrototype/vm_ios/VMPrototype/: AppDelegate.h  AppDelegate.m  Info.plist  SecondViewController.h  SecondViewController.m  ViewController.h  ViewController.m  ViewNode.h  ViewNode.m  main.m  native.m
VMPrototype/vm_ios/VMPrototype.xcodeproj/: project.pbxproj
VMPrototype/vm_ios/VMPrototypeTests/: Info.plist  VMPrototypeTests.m
android/foosball/FragmentBasics/: local.properties
android/test/AnimationsDemo/: local.properties
c++/BenGraphicsTut31/: graphicsTutorials.sln
c++/BenGraphicsTut31/Bengine/: Bengine.cpp  Bengine.h  Bengine.vcxproj  Bengine.vcxproj.filters  Camera2D.cpp  Camera2D.h  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  Timing.cpp  Timing.h  Vertex.h  Window.cpp  Window.h  picoPNG.cpp  picoPNG.h
c++/BenGraphicsTut31/ZombieGame/: Agent.h  Bullet.cpp  Gun.h  Human.h  Level.h  MainGame.cpp  Player.cpp  Zombie.h  (+1 more)
c++/test/: main  main.cpp  timer  timer.cpp
c++/tictactoe/: ttt  ttt.cpp
c++/zlib-1.2.8/: compress.lo  deflate.lo  example  examplesh  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inflate.lo  inftrees.lo  libz.dylib  minigzip  minigzipsh  uncompr.lo  zutil.lo
c/data_structure/: BST.c  BST.h  main  main.c
c/parser/: HelloWorld.c  a.out
test/delegate/: Demo  Demo.cpp
test/font/: font  font.c  input  input.c
test/glfw/: CMakeLists.txt  MainGame.cpp  MainGame.h  Makefile  common.h  main  main.cpp  test.frag  unknown.cpp
test/glfw/drawing/: Camera.h  SpriteBatch.cpp  SpriteBatch.h
test/glfw/engine/: CMakeLists.txt  common.cpp  common.h  common.tcc
test/glfw/engine/actor/: Actor.cpp  Actor.h  ActorComponent.h  ActorFactory.cpp  ActorFactory.h  PickupInterface.h
test/glfw/engine/actor/components/: HealthComponent.cpp  HealthComponent.h  Pickup.cpp  Pickup.h  PositionComponent.cpp  PositionComponent.h
test/glfw/engine/debug/: DebugView.cpp  DebugView.h
test/glfw/engine/drawing/: Camera.cpp  Camera.h  Font.h  SpriteBatch.cpp  Texture.h
test/glfw/engine/events/: EngineEvents.cpp  EngineEvents.h  EventManager.cpp  EventManager.h
test/glfw/engine/io/: Error.h  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  TextureCache.cpp  TextureCache.h  Window.cpp  Window.h
test/glfw/engine/network/: Network.cpp  Network.h
test/glfw/engine/shader/: Shader.h
test/glfw/engine/shader/glsl/: passthrough.frag  passthrough.vert
test/glfw/engine/util/: Util.cpp  Util.h
test/glfw/game/: CMakeLists.txt  MainGame.cpp  MainGame.h  main.cpp
test/glfw/game/resources/actor/: test.json
test/glfw/game/resources/level/: level.json  level1.txt
test/glfw/game/zombie/: Agent.cpp  Agent.h  Bullet.cpp  Bullet.h  GameLogic.cpp  GameLogic.h  Human.cpp  Level.cpp  Level.h  Player.h  Zombie.cpp
test/glfw/game/zombie/actor/: GameActorFactory.cpp  GameActorFactory.h
test/glfw/game/zombie/actor/components/: AI.cpp  AI.h  Health.cpp  Health.h  Inventory.cpp  Inventory.h  Render.cpp  Render.h
test/glfw/game/zombie/events/: Events.cpp  Events.h
test/glfw/io/: Error.cpp  IOManager.cpp  IOManager.h  ImageLoader.cpp  InputManager.cpp  InputManager.h  TextureCache.h  Window.cpp  Window.h
test/glfw/memory/: MemoryPool.h
test/glfw/resources/level/: level.json  level1.txt
test/glfw/shader/: Shader.cpp  Shader.h
test/glfw/shader/glsl/: test.frag  test.vert  textureShading.frag  textureShading.vert
test/glfw/util/: Util.cpp  Util.h
test/glfw/vs/TestGlfw/: TestGlfw.sln
test/glfw/vs/TestGlfw/TestGlfw/: TestGlfw.vcxproj  TestGlfw.vcxproj.filters
test/glfw/zombie/: Agent.cpp  Agent.h  Bullet.h  Gun.cpp  Human.cpp  Level.cpp  MainGame.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h  ZombieGame.vcxproj
test/gui/: cur  cur.c
test/java/: SierpinskiTriangle.java
test/map/: dualmap  dualmap.cpp  main  map  map.cpp
test/memory/: mem  mem.cpp
test/net/: client  client.c  google  google.c  main  main.cpp  network  server  server.c  socket_testing  socket_testing.cpp  testclien.asdf  testclient
test/pointers/: shared_ptr  shared_ptr.cpp
test/vector/: emplace  emplace.cpp
(+174 files in other folders)
